z-index stacking order fixes

--- a/shared/ui/styles/stream.less
+++ b/shared/ui/styles/stream.less
@@ -422,6 +422,8 @@
 
 			.body {
 				width: 100%;
+				position: relative;
+				z-index: 50;
 				// box-shadow: 0 5px 10px #ccc;
 				box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 				border-radius: 5px;
@@ -1211,12 +1213,12 @@
 	}
 	.intro {
 		margin: 0 40px;
-		min-height: 300px;
+		min-height: 100%;
 		box-sizing: border-box;
 		display: flex;
 		flex-direction: column;
-		justify-content: flex-end;
-		padding-bottom: 25%;
+		justify-content: center;
+		// padding-bottom: 25%;
 		label {
 			text-align: center;
 			padding-top: 5%;
@@ -1379,7 +1381,7 @@
 			padding: 0;
 		}
 		.form-body {
-			padding: 20px;
+			padding: 10px 20px 20px 20px;
 		}
 		.explainer {
 			color: @text-color-subtle;
